# Drop-the-Grind

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  PROJECT.md  README.md  components.json  index.html  package-lock.json  package.json  project.md  tailwind.config.js  task.md  vite.config.ts
docs/apify/: api-input-schema.md  api-output-schema.md  generate-api-input-schema.py  generate-api-output-schema.py  huntbrief-capability-matrix.md  live-sample-audit-20260606-corrected.json  live-sample-audit-20260606-fantastic.json  live-sample-audit-20260606-retry.json  live-sample-audit-20260606.json  param-audit-20260606.json
docs/apify/remote/: file.md
docs/apify/standard/: file.md
docs/firecrawl/: batch_scrape.md  error.md  get_batch_scrap_error.md  get_batch_scrape_status.md  intro.md  scrape.md  search.md
docs/subagent/20260606-curie-huntbrief-actor-capability/: curie.md  davinci.md  socrates.md  tesla.md  vangogh.md
docs/subagent/20260606-curie-import-links-investigation/: curie.md  davinci.md  socrates.md  tesla.md  vangogh.md
docs/subagent/20260606-curie-pdf-reopen-bug/: curie.md  davinci.md  socrates.md  tesla.md
docs/subagent/20260606-resume-builder-all/: curie.md  davinci.md  socrates.md
scripts/: install-typst-resource.sh
src/: main.tsx  styles.css  styles.css.bak
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: sample-apify-jobs.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  resume.rs
