[package]
name = "drop-the-grind"
version = "0.1.0"
description = "Local-first job hunt workspace"
authors = ["Drop the Grind"]
edition = "2021"

[lib]
name = "drop_the_grind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
